Added my personal introduction to about-me.ipynb

--- a/about-me.ipynb
+++ b/about-me.ipynb
@@ -20,16 +20,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi! My name is Armando Lopo. I’m excited to learn because I am interested in AI because I believe in the possibility of a technologically advanced and efficient future that can be tangible with the help of Artificial Inteligence.. A fun fact about me is: Ive always had a keen understanding of technology since i was younger and hope to pursue a career in what I believe to be the leading technologies that will push society forward..\n"
+     ]
+    }
+   ],
    "source": [
     "# About Me\n",
     "# Please fill in the following details.\n",
     "\n",
-    "name = \"Your Name Here\"\n",
-    "reason = \"Why you are interested in AI, Data Analytics, or Data Science\"\n",
-    "fun_fact = \"One fun fact about yourself or a goal for this course\"\n",
+    "name = \"Armando Lopo\"\n",
+    "reason = \"I am interested in AI because I believe in the possibility of a technologically advanced and efficient future that can be tangible with the help of Artificial Inteligence.\"\n",
+    "fun_fact = \"Ive always had a keen understanding of technology since i was younger and hope to pursue a career in what I believe to be the leading technologies that will push society forward.\"\n",
     "\n",
     "print(f\"Hi! My name is {name}. I’m excited to learn because {reason}. A fun fact about me is: {fun_fact}.\")"
    ]
@@ -37,7 +45,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -51,9 +59,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
